syntax = "proto3";

package api.loyalty.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "ecommerce/api/loyalty/v1;v1";

// LoyaltyService 定义了会员服务接口
service LoyaltyService {
  // GetMemberAccount 获取会员账户
  rpc GetMemberAccount(GetMemberAccountRequest) returns (GetMemberAccountResponse);

  // AddPoints 增加积分
  rpc AddPoints(AddPointsRequest) returns (google.protobuf.Empty);

  // DeductPoints 扣减积分
  rpc DeductPoints(DeductPointsRequest) returns (google.protobuf.Empty);

  // AddSpent 增加消费金额
  rpc AddSpent(AddSpentRequest) returns (google.protobuf.Empty);

  // ListPointsTransactions 获取积分交易记录
  rpc ListPointsTransactions(ListPointsTransactionsRequest) returns (ListPointsTransactionsResponse);

  // AddBenefit 添加会员权益
  rpc AddBenefit(AddBenefitRequest) returns (AddBenefitResponse);

  // ListBenefits 获取会员权益列表
  rpc ListBenefits(ListBenefitsRequest) returns (ListBenefitsResponse);

  // DeleteBenefit 删除会员权益
  rpc DeleteBenefit(DeleteBenefitRequest) returns (google.protobuf.Empty);
}

// MemberAccount 会员账户
message MemberAccount {
  uint64 id = 1;
  uint64 user_id = 2;
  string level = 3;
  int64 total_points = 4;
  int64 available_points = 5;
  int64 frozen_points = 6;
  uint64 total_spent = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// PointsTransaction 积分交易
message PointsTransaction {
  uint64 id = 1;
  uint64 user_id = 2;
  string transaction_type = 3;
  int64 points = 4;
  int64 balance = 5;
  uint64 order_id = 6;
  string description = 7;
  google.protobuf.Timestamp expire_at = 8;
  google.protobuf.Timestamp created_at = 9;
}

// MemberBenefit 会员权益
message MemberBenefit {
  uint64 id = 1;
  string level = 2;
  string name = 3;
  string description = 4;
  double discount_rate = 5;
  double points_rate = 6;
  bool enabled = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetMemberAccountRequest {
  uint64 user_id = 1;
}

message GetMemberAccountResponse {
  MemberAccount account = 1;
}

message AddPointsRequest {
  uint64 user_id = 1;
  int64 points = 2;
  string transaction_type = 3;
  string description = 4;
  uint64 order_id = 5;
}

message DeductPointsRequest {
  uint64 user_id = 1;
  int64 points = 2;
  string transaction_type = 3;
  string description = 4;
  uint64 order_id = 5;
}

message AddSpentRequest {
  uint64 user_id = 1;
  uint64 amount = 2;
}

message ListPointsTransactionsRequest {
  uint64 user_id = 1;
  uint32 page_size = 2;
  uint32 page_num = 3;
}

message ListPointsTransactionsResponse {
  repeated PointsTransaction transactions = 1;
  uint64 total_count = 2;
}

message AddBenefitRequest {
  string level = 1;
  string name = 2;
  string description = 3;
  double discount_rate = 4;
  double points_rate = 5;
}

message AddBenefitResponse {
  MemberBenefit benefit = 1;
}

message ListBenefitsRequest {
  string level = 1;
}

message ListBenefitsResponse {
  repeated MemberBenefit benefits = 1;
}

message DeleteBenefitRequest {
  uint64 id = 1;
}
